--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   
   <body>
     <h1>hello world</h1>
+    <p>test</p>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/main.js"></script>
