--- a/client/index.html
+++ b/client/index.html
@@ -12,9 +12,9 @@
     <app></app>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
     <script>
-    riot.mount('*');  
+    var socket = io.connect();
+    riot.mount('app',socket);  
     </script>
   </body>
 </html>
