name property submit function added

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="js/riot+compiler.min.js"></script>
     <script type="riot/tag" src="tag/app.tag"></script>
+    <script type="riot/tag" src="tag/enter.tag"></script>
+    <script type="riot/tag" src="tag/userlist.tag"></script>
+    
   </head>
   
   <body>
